--- a/YangXuAPI/appsettings.Development.json
+++ b/YangXuAPI/appsettings.Development.json
@@ -5,5 +5,8 @@
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
     }
+  },
+  "ConnectionString": {
+    "dbconn": "server=localhost;user id=root;password=mysql123;persistsecurityinfo=True;database=cnis;SslMode=none"
   }
 }
