由于使用MySql，不支持GUID类型，Id字段的类型改为int，自增长 同时添加ConnectionStrings

--- a/YangXuAPI/appsettings.Development.json
+++ b/YangXuAPI/appsettings.Development.json
@@ -6,7 +6,7 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "ConnectionString": {
+  "ConnectionStrings": {
     "dbconn": "server=localhost;user id=root;password=mysql123;persistsecurityinfo=True;database=cnis;SslMode=none"
   }
 }
