--- a/YangXuAPI/Properties/launchSettings.json
+++ b/YangXuAPI/Properties/launchSettings.json
@@ -5,7 +5,7 @@
     "YangXuAPI": {
       "commandName": "Project",
       "launchBrowser": true,
-      "launchUrl": "weatherforecast",
+      "launchUrl": "api/companies",
       "applicationUrl": "http://localhost:5000",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
