add new columns

--- a/YangXuAPI/appsettings.Development.json
+++ b/YangXuAPI/appsettings.Development.json
@@ -7,6 +7,6 @@
     }
   },
   "ConnectionStrings": {
-    "dbconn": "server=localhost;user id=root;password=mysql123;persistsecurityinfo=True;database=cnis;SslMode=none"
+    "dbconn": "server=localhost;user id=root;password=mysql123;persistsecurityinfo=True;database=AspNetCore;SslMode=none"
   }
 }
