--- a/YangXuAPI/appsettings.json
+++ b/YangXuAPI/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "dbconn": "server=localhost;user id=root;password=mysql123;persistsecurityinfo=True;database=AspNetCore;SslMode=none"
+  }
 }
