--- a/YangXuAPI/appsettings.Development.json
+++ b/YangXuAPI/appsettings.Development.json
@@ -8,5 +8,11 @@
   },
   "ConnectionStrings": {
     "dbconn": "server=localhost;user id=root;password=mysql123;persistsecurityinfo=True;database=AspNetCore;SslMode=none"
-  }
+  },
+  "TokenParameter": {
+    "Secret": "123456123456654321",
+    "Issuer": "YaoYunjie",
+    "AccessExpiration": 120,
+    "RefreshExpiration": 1440 
+  } 
 }
